Implement school management updates